Fix search bar width on mobile

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -20,7 +20,7 @@
 
 .header__input.show {
   display: flex;
-  width: 110%;
+  width: 100%;
   background: var(--black-5);
   margin-left: 2rem;
   padding: 0.75rem 1rem;
